For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0

Any uppercase BUG_* names are modernish shell bug IDs.

2022-06-05:

- Fixed a bug where tab completion would spuriously execute a command
  substitution after entering: '`something<TAB> or generate a spurious
  'end of file unexpected' syntax error after entering: '$(something<TAB>.

2022-06-04:

- Added a new --functrace long-form shell option which causes the -x/--xtrace
  option's state and the DEBUG trap action to be inherited by function scopes
  instead of being reset to default. Changes made to them within a function
  scope still do not propagate back to the parent scope. Similarly, this
  option also causes the DEBUG trap action to be inherited by subshells.

2022-06-03:

- Fixed a couple of bugs that caused floating point variables imported from
  a parent ksh through the environment to be corrupted.

- Fixed a bug where invocation-local assignments preceding a built-in or
  external command or function call did not honour their pre-existing
  attributes set by typeset (such as -i or -F) in certain cases.

2022-06-01:

- New 'typeset' feature inspired by bash (and zsh and mksh): the -g flag
  causes the specified variable(s) to be created globally, ignoring the
  local scope of ksh functions or name spaces. For example, this allows
  creating a global array or numeric variable from a ksh function.
  Thanks to @ormaaj for the feature suggestion and to @hyenias for testing.

2022-05-29:

- Fixed a bug causing an inconsistent state after a special built-in command
  threw an error within a namespace.

2022-05-27:

- Fixed a bug introduced on 2022-03-05 where 'set --default', while turning
  off the --posix option, did not re-enable the special handling of a repeated
  $IFS whitespace character as non-whitespace.

2022-05-25:

- Fixed a bug introduced on 2021-02-20 that caused incorrect output for
  typeset -L/-R/-Z when the variable contained leading or trailing spaces.